--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,9 @@ title: Forty
 subtitle: by HTML5 UP
 email: zhangzh951@gmail.com
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
-baseurl: "/home" # the subpath of your site, e.g. /blog
-url: "zhichu.xyz" # the base hostname & protocol for your site
+baseurl: "/forty" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site
+
 author: Zhichu
 street_address: 1234 Somewhere Road
 city: Nashville
